fix: remove overflow hidden from body, calc height for board main div

--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,24 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  overflow-y: hidden;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+		'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 * {
-  scrollbar-width: auto;
-  scrollbar-color: var(--chakra-colors-gray-500) transparent;
+	scrollbar-width: auto;
+	scrollbar-color: var(--chakra-colors-gray-500) transparent;
 }
 
 ::-webkit-scrollbar {
-  width: 6px;
+	width: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 50px;
-  background-color: var(--chakra-colors-gray-500);
+	border-radius: 50px;
+	background-color: var(--chakra-colors-gray-500);
 }
 
-#root {
-  overflow-y: hidden;
-}
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
